[package]
name = "Anime_dataset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
csv = "1.3.0"
serde = { version = "1.0.196", features = ["derive"] }
